Fix bug where centered paragraphs show up left aligned on reader full post view (#73011)

--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -158,8 +158,12 @@
 	color: var(--color-neutral-70);
 	font-size: rem(17px);
 	line-height: 28px;
+
 	figure.wp-block-table {
 		overflow: auto;
+	}
+	.has-text-align-center {
+		text-align: center;
 	}
 }
 
